applications/raw-example-wsl2-and-kind/resources/bgd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bgd-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        path: /bgd(/|$)(.*)
        backend:
          service:
            name: bgd
            port:
              number: 80
